css/theme.css
body {
  padding-top: 70px;
  padding-bottom: 200px;
  font-weight: normal;
  width: calc(100vw - 17px);
}

.theme-dropdown .dropdown-menu {
  position: static;
  display: block;
  margin-bottom: 20px;
}

.theme-showcase > p > .btn {
  margin: 5px 0;
}

.blog-post {
  padding-bottom: 70px;
  font-size: 26px;
}

.list-group-item {
  padding: 5px 15px;
}

.list-group {
  width: 90%
}

img {
    float: right;
    padding: 30px;
    max-width: 100%;
}

/*
 * Override Bootstrap's default container.
 */

@media (min-width: 1200px) {
  .container {
    width: 1400px;
  }
}

h1,h2,h3,h4 {
  padding-bottom: 9px;
  margin: 40px 0 20px;
  border-bottom: 1px solid #eee;
}

/*add space before header, so scrolling is not hidden by top bar*/
h1:before,h2:before,h3:before,h4:before {
  display: block;
  content: " ";
  margin-top: -55px;
  height: 55px;
  visibility: hidden;
}


/*
 * Navigation bar
*/

#navbar {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: #333;
  position: fixed;
  right: 0;
  left: 0;
  top: 0;
  z-index: 1030;
}

#navbar a {
  display: inline-block;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  transition: 0.3s;
  font-size: 17px;
}

#navbar a.current {background-color: #666;}

#navbar a:hover {background-color: #555;}

#navbar .icon {display: none;}

#navbar .dropdown_content {
  display: none;
  position: fixed;
  background-color: #333;
  float: left;
  padding: 0px 30px;
  margin-left: 75px;
}

#navbar .dropdown_content.show_content{
  display: block;
}

@media screen and (max-width:680px) {
  #navbar :not(:first-child) {display: none;}
  #navbar .icon {
    float: right;
    display: inline-block;
  }
}

@media screen and (max-width:680px) {
  #navbar.responsive .icon {
    position: absolute;
    right: 0;
    top: 0;
  }
  #navbar.responsive a {
    display: block;
    text-align: left;
    float: none;
  }
}

.dropdown:after {
  content: " ";
  display: inline-block;
  width: 0;
  height: 0;
  margin-left: 2px;
  vertical-align: middle;
  border-top: 4px solid;
  border-right: 4px solid transparent;
  border-left: 4px solid transparent;
}

@media screen and (max-width:680px) {
  body > div.container {
    display: flex;
    flex-direction: column;
  }
  #main-content {
    order: 2;
  }
  .col-sm-4 {
    order: 1;
  }
}

#toc li.collapsed + li {
  display: none;
}

#toc .collapseIcon {
  float: right;
}

#toc .collapsible.collapsed .collapseIcon:before {
  content: "[+]";
}

#toc .collapsible .collapseIcon:before {
  content: "[-]";
}

#toc {
  padding-left: 0px;
  list-style-type: none;
  counter-reset: item;
  margin: 0px 0px 0px 0px;
  color: #555;
}

#toc ol {
  padding-left: 0px;
  list-style-type: none;
  counter-reset: item;
  margin: 0px 0px 0px 0px;
}

#toc li {
  display: block;
  float: none;
  margin: 0px 0px -1px 0px;
  line-height:20px;
}

#toc > li {
 border: 1px solid #ddd;
}

#toc li  a{
  color: #555;
  border: 0px;
}

#toc li a:before {
  content: counters(item, ".") " ";
  counter-increment: item;
  float: left;
  margin-right: 1em;
  position: relative;
  min-width: 2em;
}

#toc hr {
  position: absolute;
  left: 30px;
  z-index: 1000;
  border: 0;
  margin-top: 16px;
  margin-bottom: 16px;
  width: 1px;
  background: #ddd;
}

/*
 * Override bootstrap behavior
*/
#toc .list-group-item {
  border-bottom-left-radius: 0px;
  border-bottom-right-radius: 0px;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}

#toc > li:first-Child > a {
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

#toc > li:last-Child > a {
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

#back-to-top {
  position: fixed;
  bottom: 30px;
  right: 30px;
  margin-left: -150px;
  width: 50px;
  height: 50px;

  -webkit-border-radius: 15px;
  -moz-border-radius: 15px;
  border-radius: 15px;
  display: none;
  margin-bottom: 7px;
  border: 1px solid #bbb;

  text-align: center;
  text-transform: uppercase;
  text-decoration: none;
  background: #bbb;
  cursor:pointer;
}

#back-to-top.show {
  display: block;
}

#back-to-top:hover {
  background: #ccc;
}

#back-to-top:hover .arrow {
  border-color:#444;
}

.arrow {
  display:inline-block;
  position: absolute;
  top: 20px;
  left: 17px;
  width:14px;
  height:14px;
  line-height:7px;
  border-top:3px solid #aaa;
  border-right:3px solid #aaa;
  -ms-transform:rotate(-45deg);
  -moz-transform:rotate(-45deg);
  -webkit-transform:rotate(-45deg);
  transform:rotate(-45deg);
}

h1:target,h2:target,h3:target,h4:target,h5:target,h6:target {
  animation: highlight 1s ease;
}

@keyframes highlight {
  from { background: yellow; }
  to { background: white; }
}

